feat: 完成AI全部功能整合（拆解+意图+进度判断+激励文案）